; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-ac100.c_ac100_rtc_unregister_clks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-ac100.c_ac100_rtc_unregister_clks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ac100_rtc_dev = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ac100_rtc_dev*)* @ac100_rtc_unregister_clks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ac100_rtc_unregister_clks(%struct.ac100_rtc_dev* %0) #0 {
  %2 = alloca %struct.ac100_rtc_dev*, align 8
  store %struct.ac100_rtc_dev* %0, %struct.ac100_rtc_dev** %2, align 8
  %3 = load %struct.ac100_rtc_dev*, %struct.ac100_rtc_dev** %2, align 8
  %4 = getelementptr inbounds %struct.ac100_rtc_dev, %struct.ac100_rtc_dev* %3, i32 0, i32 1
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @of_clk_del_provider(i32 %7)
  %9 = load %struct.ac100_rtc_dev*, %struct.ac100_rtc_dev** %2, align 8
  %10 = getelementptr inbounds %struct.ac100_rtc_dev, %struct.ac100_rtc_dev* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @clk_unregister_fixed_rate(i32 %13)
  ret void
}

declare dso_local i32 @of_clk_del_provider(i32) #1

declare dso_local i32 @clk_unregister_fixed_rate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
